<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">美淘淘</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="dealing">处理中&#8230;</string>
    <string name="cookie_invild">您的登陆已过期，请重新登陆！</string>
    <string name="hairdressing_hint">美发</string>
    <string name="bespeak_hint">预约</string>
    <string name="presonal_hint">我的</string>
    <string name="Community_hint">社区</string>
    <string name="setup_time_hint">排期</string>

    <!-- XListView -->
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载&#8230;</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>

    <!-- register -->
    <string name="validate_phone">验证手机</string>
    <string name="click_upload_photo">点击上传照片</string>
    <string name="cancel">取消</string>
    <string name="register">注册</string>
    <string name="l_am_user">我是用户</string>
    <string name="l_am_barber">我是理发师</string>
    <string name="hint_phone">请输入手机号</string>
    <string name="hint_validate">请输入验证码</string>
    <string name="hint_invite">请输入邀请码</string>
    <string name="hint_password">请输入密码</string>
    <string name="btn_next">下一步</string>
    <string name="service_protocol">服务协议</string>
    <string name="duomei_service_protocol">多美服务协议</string>
    <string name="text_next_for_agree">点击下一步表示同意</string>
    <string name="gain_identify">获取验证码</string>
    <string name="upload_IDcard_info">\t\t请您上传身份证认证，您的信息将用于确定您的身份，我们保证不对外泄漏。</string>
    <string name="work_begin_time">工作开始时间</string>
    <string name="work_end_time">工作结束时间</string>
    <string name="work_location">工作地点</string>
    <string name="commit">提交</string>
    <string name="level">级别</string>
    <string name="level_chief">首席理发师</string>
    <string name="level_high">高级理发师</string>
    <string name="level_top">总监</string>
    <string name="level_deep">资深理发师</string>
    <string name="witnesser_name">证明人姓名</string>
    <string name="witnesser_phone">证明人手机号码</string>
    <string name="reminder_title">温馨提示</string>
    <string name="reminder_msg">尊敬的用户，您已经提交资料，我们将尽快核实资料后和你确认。</string>
    <string name="sure">确认</string>
    <string name="sure_bespeak">确定预约</string>
    <string name="limit_appomint">限时抢约</string>
    <string name="week_stat">每周之星</string>
    <string name="recomment_for_you">为您推荐</string>
    <string name="remainder">剩余</string>
    <string name="number">次</string>
    <string name="finish">完成</string>
    <string name="num">单</string>
    <string name="technology">技术</string>
    <string name="time_keep">守时</string>
    <string name="attitude">态度</string>
    <string name="technology2">技术:</string>
    <string name="time_keep2">守时:</string>
    <string name="attitude2">态度:</string>
    <string name="hairdress1">剪发</string>
    <string name="hairdress2">染发</string>
    <string name="hairdress3">冷烫</string>
    <string name="hairdress4">热烫</string>
    <string name="hairdress5">长发</string>
    <string name="hairdress6">中发</string>
    <string name="hairdress7">短发</string>
    <string name="hairdress8">男发</string>
    <string name="hairdress9">烫发</string>
    <string name="hairdress10">护理</string>
    <string name="hairdress11">造型</string>
    <string name="price_set">价格设置</string>
    <string name="wallet">钱包</string>
    <string name="barber_shop">可赴约理发店</string>
    <string name="schedule">我的排期</string>
    <string name="series">系列</string>
    <string name="type">类型</string>
    <string name="action">操作</string>
    <string name="action1">修改</string>
    <string name="hint_setup_price">制定您可以提供服务的价格列表，如创意染发*元</string>
    <string name="hint_update_price">请提供您能够提供的服务，产品自带，或者自行在您选择的点购买</string>
    <string name="hint_wallet">选择你可以支持的支付方式，以便我们支付您的理发费用</string>
    <string name="serve_select">业务类型（请点击选择）</string>
    <string name="name">名称</string>
    <string name="hint_describe">添加描述该作品</string>
    <string name="length">长度</string>
    <string name="length1">统一</string>
    <string name="length2">长</string>
    <string name="length3">短</string>
    <string name="price">价格</string>
    <string name="price2">价格:</string>
    <string name="hint_price">输入价格</string>
    <string name="delete">删除</string>
    <string name="add_one_line">添加一行</string>
    <string name="new_add">新增</string>
    <string name="setup_price">价格设置</string>
    <string name="pay_type1">支付宝支付</string>
    <string name="pay_type2">微信支付</string>
    <string name="pay_type3">银行卡支付</string>
    <string name="bank">银行</string>
    <string name="hint_account1">请输入支付宝帐号</string>
    <string name="hint_account2">请输入微信帐号</string>
    <string name="hint_account3">请输入银行卡帐号</string>
    <string name="hint_account4">选择银行</string>
    <string name="account1">支付宝帐号</string>
    <string name="account2">微信帐号</string>
    <string name="account3">银行卡帐号</string>
    <string name="order">预约单</string>
    <string name="goodat">擅长</string>
    <string name="phoneNum">手机号</string>
    <string name="share">分享</string>
    <string name="kefu">客服</string>
    <string name="about">关于</string>
    <string name="opus">作品</string>
    <string name="comment">评论</string>
    <string name="comment2">评价:</string>
    <string name="attention">关注</string>
    <string name="fans">粉丝</string>
    <string name="message">消息</string>
    <string name="check_new_version">检测新版本</string>
    <string name="advance">反馈意见</string>
    <string name="hint_advance">建议描述</string>
    <string name="exit">退出</string>
    <string name="login">登录</string>
    <string name="close">关闭</string>
    <string name="forget_password">忘记密码?</string>
    <string name="quick_register">快速注册</string>
    <string name="status">状态</string>
    <string name="hint_close">关闭后您无法知道客户预约你</string>
    <string name="exit_login">退出登录</string>
    <string name="hint_exit_login">注销或切换其它帐号</string>
    <string name="share_weixin">分享到微信</string>
    <string name="share_friends">分享到朋友圈</string>
    <string name="share_QQ">分享到QQ</string>
    <string name="share_weibo">分享到微博</string>
    <string name="hint_myphone">该手机号用于400客服与您确认您的客户预约，不会对外公布。</string>
    <string name="myphone">我的手机</string>
    <string name="mypre_order">我的预约</string>
    <string name="hint_goodat">您擅长的技术可以提供给用户判断，最多能选三个</string>
    <string name="hint_receive_honour">个人特长描述，可以描述在某个领域内获得什么奖项和荣誉，限制50个字，如：2014年参加###获得最佳理发奖</string>
    <string name="my_goodat">我最擅长:</string>
    <string name="click_select">(点击选择)</string>
    <string name="receive_honour">获得荣誉:</string>
    <string name="honour_photo">荣誉照片:</string>
    <string name="data">资料</string>
    <string name="video">视频</string>
    <string name="expire_order">已过期预约</string>
    <string name="valid_order">未过期预约</string>
    <string name="already_schedule">已排期</string>
    <string name="add_schedule">添加排期</string>
    <string name="publish">发布:</string>
    <string name="date">日期:</string>
    <string name="my_msg">我的消息</string>
    <string name="can_appointment">可预约:</string>
    <string name="can_go_appointment">可赴约理发店:</string>
    <string name="can_appointment_barbershop">您选择可赴约的理发店有</string>
    <string name="hint_add_schedule">请注意：洗剪吹系统设置1个小时，染发2个小时，烫发2个小时，护理1个小时，时间到后系统将自动释放位置，给其他人预约。</string>
    <string name="hint_alredy_schedule">注意：如果已经被用户预约，则无法删除该排期</string>
    <string name="business_type">业务类型</string>
    <string name="appointment_location">预约地点</string>
    <string name="finish_num">完成单数：</string>
    <string name="finish_account">到账：</string>
    <string name="yuan">元</string>
    <string name="my_opus">我的作评</string>
    <string name="takePhoto">手机拍照</string>
    <string name="localUpload">本地上传</string>
    <string name="location">地址:</string>
    <string name="keyuyue_barber">可预约的理发师</string>
    <string name="attention_barber">关注的理发师</string>
    <string name="attention_user">关注的用户</string>
    <string name="cancel_attention">取消关注</string>
    <string name="new_opus">最新作品</string>
    <string name="my_attention">我的关注</string>
    <string name="my_fans">我的粉丝</string>
    <string name="has_finish">已完成</string>
    <string name="hint_barber_price">该理发师的业务价格：</string>
    <!-- 用户部分 -->
    <string name="from_low_to_high">从低到高</string>
    <string name="from_high_to_low">从高到低</string>
    <string name="zonghe_level">综合星级</string>
    <string name="finish_num2">完成单数</string>
    <string name="location2">地址</string>
    <string name="search">搜索</string>
    <string name="hairdress_type">理发类型:</string>
    <string name="select_hairdress_shop">选择理发店:</string>
    <string name="bespeak_time">预约时间点:</string>
    <string name="explicit_address">详细地址:</string>
    <string name="already_bespeak">被预约</string>
    <string name="morning">上午</string>
    <string name="afternoon">下午</string>
    <string name="barber">理发师：</string>
    <string name="select_barbershop">选择理发店：</string>
    <string name="select_payway">选择支付方式</string>
    <string name="nowPay">现在付款</string>
    <string name="afterPay">理完付款</string>
    <string name="show_myself">自恋一下</string>
    <string name="ask_for_be_barber">申请成为理发师</string>
    <string name="personal_center">个人中心</string>
    <string name="new_photo">最新靓照</string>
    <string name="hint_add_comment">添加评价</string>
    <string name="upload_photo">上传照片：</string>

    <string-array name="spinner_level">
        <item>@string/level</item>
        <item>@string/level_chief</item>
        <item>@string/level_deep</item>
        <item>@string/level_high</item>
        <item>@string/level_top</item>
    </string-array>
    <string-array name="spinner_price">
        <item>@string/price</item>
        <item>@string/from_high_to_low</item>
        <item>@string/from_low_to_high</item>
    </string-array>
    <string-array name="spinner_finishNum">
        <item>单数</item>
        <item>@string/from_high_to_low</item>
        <item>@string/from_low_to_high</item>
    </string-array>

</resources>