<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/body_backcolor"
    android:orientation="vertical" >

    <include layout="@layout/title_bar" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/text_margin_top5"
        android:layout_marginLeft="@dimen/text_margin_left3"
        android:layout_marginRight="@dimen/text_margin_right1"
        android:layout_marginTop="@dimen/text_margin_top5"
        android:text="@string/hint_update_price" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_margin_left3"
            android:layout_marginTop="@dimen/text_margin_top5"
            android:text="@string/serve_select" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/layout_margin_left2"
            android:orientation="horizontal" >

            <RadioButton
                style="@style/RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hairdress1" />

            <RadioButton
                style="@style/RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hairdress2" />

            <RadioButton
                style="@style/RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hairdress9" />

            <RadioButton
                style="@style/RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hairdress10" />

            <RadioButton
                style="@style/RadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hairdress11" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/layout_margin_left2" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/text_margin_left5"
                android:hint="@string/hint_describe" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/layout_margin_left2"
            android:layout_marginTop="@dimen/layout_margin_top4"
            android:gravity="center_vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/length" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/layout_margin_left2"
                android:layout_marginLeft="@dimen/text_margin_left5"
                android:orientation="horizontal" >

                <RadioButton
                    style="@style/RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/length1" />

                <RadioButton
                    style="@style/RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/length2" />

                <RadioButton
                    style="@style/RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/length3" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/layout_margin_left2"
            android:layout_marginTop="@dimen/layout_margin_top4"
            android:gravity="center_vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/text_margin_left5"
                android:hint="@string/hint_price" >
            </EditText>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/view_height3"
            android:background="@color/body_backcolor" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height4"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/add"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/text_margin_right2"
                android:gravity="center"
                android:text="@string/add_one_line" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/text_margin_right2"
                android:layout_toLeftOf="@id/add"
                android:gravity="center"
                android:text="@string/delete" />
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/tv_sure"
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_height1"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/text_margin_bottom"
            android:layout_marginLeft="@dimen/text_margin_left9"
            android:layout_marginRight="@dimen/text_margin_left9"
            android:background="#FF0000"
            android:gravity="center"
            android:text="@string/sure" />
    </RelativeLayout>

</LinearLayout>