<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/body_backcolor"
    android:orientation="vertical" >

    <include layout="@layout/title_bar" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/text_margin_top5"
        android:layout_marginLeft="@dimen/text_margin_left3"
        android:layout_marginRight="@dimen/text_margin_right1"
        android:layout_marginTop="@dimen/text_margin_top5"
        android:text="@string/hint_update_price"
        android:textColor="@color/hint_textcolor"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical" >

        <TextView
            style="@style/form_left_text_style"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginLeft="@dimen/text_margin_left3"
            android:layout_marginTop="@dimen/text_margin_top5"
            android:text="@string/serve_select" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical" >

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:orientation="horizontal"
                android:padding="0dp" >

                <RadioButton
                    style="@style/RadioButton"
                    android:background="@drawable/schedule_setprice_btn_choose"
                    android:text="@string/hairdress1"
                    android:textColor="@color/white" />

                <RadioButton
                    style="@style/RadioButton"
                    android:background="@drawable/schedule_addprice_btn"
                    android:text="@string/hairdress2" />

                <RadioButton
                    style="@style/RadioButton"
                    android:background="@drawable/schedule_addprice_btn"
                    android:text="@string/hairdress9" />

                <RadioButton
                    style="@style/RadioButton"
                    android:background="@drawable/schedule_addprice_btn"
                    android:text="@string/hairdress10" />

                <RadioButton
                    style="@style/RadioButton"
                    android:background="@drawable/schedule_addprice_btn"
                    android:text="@string/hairdress11" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/layout_margin_left2"
            android:layout_marginTop="18dp" >

            <TextView
                style="@style/form_left_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/name" />

            <EditText
                style="@style/form_right_editText_style"
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:layout_marginLeft="@dimen/text_margin_left5"
                android:layout_marginRight="@dimen/text_margin_right4"
                android:hint="@string/hint_describe" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/layout_margin_left2"
            android:layout_marginTop="18dp"
            android:gravity="center_vertical" >

            <TextView
                style="@style/form_left_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/length" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/text_margin_left5"
                android:layout_marginRight="74dp"
                android:orientation="horizontal" >

                <RadioButton
                    style="@style/RadioButton"
                    android:background="@drawable/schedule_setprice_btn_choose"
                    android:text="@string/length1"
                    android:textColor="@color/white" />

                <RadioButton
                    style="@style/RadioButton"
                    android:background="@drawable/schedule_addprice_btn"
                    android:text="@string/length2" />

                <RadioButton
                    style="@style/RadioButton"
                    android:background="@drawable/schedule_addprice_btn"
                    android:text="@string/length3" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/layout_margin_left2"
            android:layout_marginTop="18dp"
            android:gravity="center_vertical" >

            <TextView
                style="@style/form_left_text_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price" />

            <EditText
                style="@style/form_right_editText_style"
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:layout_marginLeft="@dimen/text_margin_left5"
                android:layout_marginRight="@dimen/text_margin_right4"
                android:hint="@string/hint_price" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp" >

            <include layout="@layout/line_horizontal" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical" >

            <TextView
                android:id="@+id/add"
                android:layout_width="91dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/text_margin_right2"
                android:background="@drawable/schedule_addprice_btn_add"
                android:gravity="center"
                android:text="@string/add_one_line"
                android:textColor="@color/titile_barcolor"
                android:textSize="14sp" />

            <TextView
                android:layout_width="91dp"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/text_margin_right2"
                android:layout_toLeftOf="@id/add"
                android:background="@drawable/schedule_addprice_btn_add"
                android:gravity="center"
                android:text="@string/delete"
                android:textColor="@color/titile_barcolor"
                android:textSize="14sp" />
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/tv_sure"
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_height1"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/text_margin_bottom"
            android:layout_marginLeft="@dimen/text_margin_left9"
            android:layout_marginRight="@dimen/text_margin_left9"
            android:background="@drawable/signup_signup_btn_check_bg"
            android:gravity="center"
            android:text="@string/sure" />
    </RelativeLayout>

</LinearLayout>