<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/body_backcolor"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingBottom="8dp"
        android:paddingLeft="17dp"
        android:paddingRight="17dp"
        android:paddingTop="8dp"
        android:text="@string/hint_add_schedule"
        android:textSize="12sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/signup_location_input_bg"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="12dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/date"
                android:textSize="16sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="20dp"
                android:inputType="date"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="14dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/can_appointment"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="14dp"
                android:text="@string/click_select"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="15dp"
            android:orientation="vertical" >

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_margin="0dp"
                android:orientation="horizontal"
                android:padding="0dp" >

                <RadioButton
                    style="@style/RadioButton"
                    android:background="@drawable/signup_signup_btn_check_bg"
                    android:text="@string/hairdress1" />

                <RadioButton
                    style="@style/RadioButton"
                    android:layout_width="0dp"
                    android:text="@string/hairdress2" />

                <RadioButton
                    style="@style/RadioButton"
                    android:text="@string/hairdress9" />

                <RadioButton
                    style="@style/RadioButton"
                    android:text="@string/hairdress10" />

                <RadioButton
                    style="@style/RadioButton"
                    android:text="@string/hairdress11" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="14dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/can_go_appointment"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="14dp"
                android:text="您还没设置合适的理发店"
                android:textColor="@color/red"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>